# adonai-cli

./: .isort.cfg  README.md  pyproject.toml
adonai_cli/: __init__.py  config.json  config.py  decorators.py
adonai_cli/console/: domain.py  main.py  permission.py  project.py  utils.py
