[tool.poetry]
name = "adonai-cli"
version = "0.0.1"
description = "Adonai CLI client for permission server"
authors = ["Aleksander Lavrov <egnod@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.2.1"
adonai-client = "^0.1.5"
termcolor = "^1.1"
simplejson = "^3.17"
termtables = "^0.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^1.21"
bump2version = "^1.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
